# Deeztracker

./: .gitignore  Deeztracker.spec  README.md  index.html  main.spec  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
.gemini/: tauri-expert.md
.gemini/agents/: tauri-expert.md
.gemini/skills/: ts-best-practices.md
.github/workflows/: build-and-release.yml  build.yml
docs/: api_investigation.md  functional_requirements.md
src/: App.vue  main.py  main.ts  style.css  test.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_player.rs  database.rs  lib.rs  main.rs  rusteer.rs
src-tauri/src/api/: gateway.rs  lyrics.rs  mod.rs  public.rs
src-tauri/src/converters/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/models/: artist.rs  playlist.rs  track.rs
src/components/: AppBar.vue  ConfirmModal.vue  NotificationToast.vue  TrackList.vue
src/features/api/: service.py
src/features/api/types/: __init__.py  album.py  artist.py  playlist.py  track.py
src/features/auth/services/: authService.ts
src/features/auth/stores/: useAuthStore.ts
src/features/auth/views/: LoginView.vue
src/features/dashboard/components/: SettingsModal.vue
src/features/dashboard/stores/: useSettingsStore.ts
src/features/dashboard/views/: DashboardView.vue
src/features/downloader/: service.py  utils.py
src/features/playback/components/: LyricsDisplay.vue  PlayerBar.vue  QueueDrawer.vue
src/features/playback/services/: playbackService.ts
src/features/playback/stores/: usePlaybackStore.ts
src/features/playback/utils/: lrcParser.ts
src/features/playback/views/: FullscreenPlayer.vue
src/features/player/: media_notifications.py  player_manager.py
src/features/player/backends/: mpris_backend.py  smtc_backend.py
src/features/search/components/: LoadingSpinner.vue
src/features/search/models/: search.ts
src/features/search/services/: searchService.ts
src/features/search/stores/: useSearchStore.ts
src/features/search/utils/: image.ts  time.ts
src/features/search/views/: AlbumDetailView.vue  ArtistDetailView.vue  PlaylistDetailView.vue  SearchView.vue
src/features/translations/: __init__.py  translator.py
src/features/translations/languages/: __init__.py  en.py  es.py
src/layouts/: MainLayout.vue
src/locales/: en.json  es.json
src/router/: index.ts
src/stores/: useNotificationStore.ts
src/ui/: app.py  theme.py
src/ui/components/: appbar.py  custom_titlebar.py  list_items.py  mini_player.py
src/ui/views/: album_view.py  artist_view.py  local_view.py  login_view.py  player_view.py  playlist_view.py  search_view.py  settings_view.py
src/utils/: date.ts  drag.ts
