[project]
name = "Deeztracker"
version = "0.1.0"
description = "Deeztracker app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deezspot-spotizerr",
    "flet",
    "httpx",
    "mutagen",
    "just-playback"
]

[tool.flet]
app.path = "src"
app.module = "main" 
app.assets = ["assets"]
product = "Deeztracker" 
company = "Deeztracker" 
copyright = "Copyright (c) 2025"

[tool.flet.android]
secure = true
orientation = "portrait"
bundle_id = "com.deeztracker"