[project]
name = "Deeztracker"
version = "0.1.0"
description = "Deeztracker app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deezspot-spotizerr",
    "flet",
    "flet-cli",
    "flet-desktop",
    "httpx",
    "mutagen",
    "python-vlc",
    "pillow",
    "pyinstaller",
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
    "dbus-python>=1.4.0; sys_platform == 'linux'",
    "PyGObject>=3.42.0; sys_platform == 'linux'",
]

[tool.flet]
app.path = "src"
app.module = "main" 
app.assets = ["assets"]
product = "Deeztracker" 
company = "Deeztracker" 
copyright = "Copyright (c) 2025"

[tool.flet.android]
secure = true
orientation = "portrait"
bundle_id = "com.deeztracker"
